tests/semantic_errors/empty_text_content.draw
TEXT(160, 420, "") COLOR green SIZE 24;
